Added navigation bar with menu items

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Myone</title>
+  <title>Volunteer</title>
   <base href="/">
   <!-- To Fix : Error: Bootstrap tooltips require Tether (http://tether.io/)     at eval -->
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
 <body>
   <app-root></app-root>
